Filter event types by organizer